# muller

./: README.md  _quarto.yml  about.qmd  index.qmd
docs/: about.html  index.html  listings.json  search.json
docs/posts/fast-ai-intro-project/: index.html
docs/posts/post-with-code/: index.html
docs/posts/understanding-your-dataset/: index.html
docs/posts/welcome/: index.html
posts/fast-ai-dental-radiographs/: index.ipynb
posts/understanding-your-dataset/: index.ipynb  pyproject.toml
